*** empty log message ***
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@85 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -12,5 +12,6 @@ Added Edit Name in comments - 2nd September 2003, Tarique
 Added IP logging - 18th - 18th September 2003, Jack
 Added Fav Pics Option - 18th September 2003, Tarique
 Added AnyContent Block - 19th September 2003, Tarique
+Added Complete Queries to the debug output - 24th September 2003, Tarique
 Added COmment IP viewing - 24th September 2003, Jack
- 
+
