--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -13,5 +13,6 @@ Added IP logging - 18th - 18th September 2003, Jack
 Added Fav Pics Option - 18th September 2003, Tarique
 Added AnyContent Block - 19th September 2003, Tarique
 Added Complete Queries to the debug output - 24th September 2003, Tarique
-Added COmment IP viewing - 24th September 2003, Jack
+Added Comment IP viewing - 24th September 2003, Jack
+Fixed Batch Update to force selection of an album & identify the category of an album - 25th September 2003, Jack
 
