Added email Notification on new comments
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@95 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -15,4 +15,5 @@ Added AnyContent Block - 19th September 2003, Tarique
 Added Complete Queries to the debug output - 24th September 2003, Tarique
 Added Comment IP viewing - 24th September 2003, Jack
 Fixed Batch Update to force selection of an album & identify the category of an album - 25th September 2003, Jack
+Added Email notification on Comment - 25th September 2003, Tarique
 
