Added basic banning functionality  - no theme button yet, doesn't do username based banning & expiry date entry still krufty
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@131 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -22,3 +22,4 @@ Added 'no right-click' admin option (I know this is childish but has been reques
 IP Logging now on picture uploads - 30th September 2003, Jack
 fixed improper html tags in hardwired theme - 1st October, GauGau
 added version info to html output (above </body>) for easier support - 1st October, GauGau
+Added basic banning functionality  - no theme button yet, doesn't do username based banning & expiry date entry still krufty - 2nd October, 2003,
