Added 1.2.0 translations for swedish and german - 07th October 2003, GauGau
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@181 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -29,4 +29,4 @@ Fixed pop-up scrollbar bug (http://coppermine.sourceforge.net/board/viewtopic.ph
 Added 1.2.0 translations for dutch, finnish, norwegian, spanish - 05th October 2003, GauGau
 Added 1.2.0 translations for arabic, hebrew and turkish - 06th October 2003, GauGau
 Moved all docs into the docs folder - 06th October 2003, GauGau
-Added 1.2.0 translations for swedish and turkish - 07th October 2003, GauGau
+Added 1.2.0 translations for swedish and german - 07th October 2003, GauGau
