Added 1.2.0 changes in english language to bosnian.php, brazilian.php, estonian.php, latvian.php, portuguese.php, russian.php, slovenian.php for 1.2.0 compliance - 07th October 2003, GauGau
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@182 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -30,3 +30,4 @@ Added 1.2.0 translations for dutch, finnish, norwegian, spanish - 05th October 2
 Added 1.2.0 translations for arabic, hebrew and turkish - 06th October 2003, GauGau
 Moved all docs into the docs folder - 06th October 2003, GauGau
 Added 1.2.0 translations for swedish and german - 07th October 2003, GauGau
+Added 1.2.0 changes in english language to bosnian.php, brazilian.php, estonian.php, latvian.php, portuguese.php, russian.php, slovenian.php for 1.2.0 compliance - 07th October 2003, GauGau
