--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -33,3 +33,5 @@ Added 1.2.0 translations for swedish and german - 07th October 2003, GauGau
 Added 1.2.0 changes in english language to bosnian.php, brazilian.php, estonian.php, latvian.php, portuguese.php, russian.php, slovenian.php for 1.2.0 compliance - 07th October 2003, GauGau
 Added 1.2.0 indonesian (done by sengsara), updated danish (Laugesen) - 08th October 2003, GauGau
 Fixed corrupted language files (mustn't be in unicode, but ansi)  - 08th October 2003, GauGau
+Added romanian language file - 09th October 2003, GauGau
+fixed rtl-bug (filesize/unit) - 09th October 2003, GauGau
