added french translation for 1.2.0
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@210 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -35,3 +35,4 @@ Added 1.2.0 indonesian (done by sengsara), updated danish (Laugesen) - 08th Octo
 Fixed corrupted language files (mustn't be in unicode, but ansi)  - 08th October 2003, GauGau
 Added romanian language file - 09th October 2003, GauGau
 fixed rtl-bug (filesize/unit) - 09th October 2003, GauGau
+Added french translation for 1.2.0 - 10th October 2003, GauGau
