added slovenian language file for 1.2.0
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@219 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -37,3 +37,4 @@ Added romanian language file - 09th October 2003, GauGau
 fixed rtl-bug (filesize/unit) - 09th October 2003, GauGau
 Added french translation for 1.2.0 - 10th October 2003, GauGau
 Added korean language file for 1.2.0 - 10th October 2003, GauGau
+Added slovenian language file for 1.2.0 - 12th October 2003, GauGau
