--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -39,3 +39,4 @@ Added french translation for 1.2.0 - 10th October 2003, GauGau
 Added korean language file for 1.2.0 - 10th October 2003, GauGau
 Added slovenian language file for 1.2.0 - 12th October 2003, GauGau
 Added croatian language file for 1.2.0 - 14th October 2003, GauGau
+Added chinese_gb language file for 1.2.0 - 14th October 2003, GauGau
