--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -40,4 +40,6 @@ Added korean language file for 1.2.0 - 10th October 2003, GauGau
 Added slovenian language file for 1.2.0 - 12th October 2003, GauGau
 Added croatian language file for 1.2.0 - 14th October 2003, GauGau
 Added chinese_gb language file for 1.2.0 - 14th October 2003, GauGau
-Added Thumbnails for categories, Edit Single Picture, EXIF and IPTC data shown, some bug fixes and new bugs - 16th October 2003, Tarique 
+Added Thumbnails for categories, Edit Single Picture, EXIF and IPTC data shown, some bug fixes and new bugs - 16th October 2003, Tarique
+Added latvian language file for 1.2.0 - 16th October 2003, GauGau
+Added chinese_gb language file for 1.2.0 - 16th October 2003, GauGau
