--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -40,3 +40,4 @@ Added korean language file for 1.2.0 - 10th October 2003, GauGau
 Added slovenian language file for 1.2.0 - 12th October 2003, GauGau
 Added croatian language file for 1.2.0 - 14th October 2003, GauGau
 Added chinese_gb language file for 1.2.0 - 14th October 2003, GauGau
+Added latvian language file for 1.2.0 - 16th October 2003, GauGau
