--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -44,3 +44,5 @@ Added Thumbnails for categories, Edit Single Picture, EXIF and IPTC data shown, 
 Added latvian language file for 1.2.0 - 16th October 2003, GauGau
 Added notification on user registration by email (admin option) - 19th October 2003, GauGau
 Added option to disable comment flood protection - 19th October 2003, GauGau
+Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
+Updated croatian, french, german, italian  - 21th October 2003, GauGau
