--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -41,3 +41,5 @@ Added slovenian language file for 1.2.0 - 12th October 2003, GauGau
 Added croatian language file for 1.2.0 - 14th October 2003, GauGau
 Added chinese_gb language file for 1.2.0 - 14th October 2003, GauGau
 Added latvian language file for 1.2.0 - 16th October 2003, GauGau
+Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
+Updated croatian, french, german, italian  - 21th October 2003, GauGau
