added portuguese translation for 1.2.0
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@300 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -46,3 +46,4 @@ Added notification on user registration by email (admin option) - 19th October 2
 Added option to disable comment flood protection - 19th October 2003, GauGau
 Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
 Updated croatian, french, german, italian  - 21th October 2003, GauGau
+Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
