--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -43,3 +43,5 @@ Added chinese_gb language file for 1.2.0 - 14th October 2003, GauGau
 Added latvian language file for 1.2.0 - 16th October 2003, GauGau
 Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
 Updated croatian, french, german, italian  - 21th October 2003, GauGau
+Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
+Removed buggy no right-click option - 24th October, GauGau
