--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -47,3 +47,4 @@ Added option to disable comment flood protection - 19th October 2003, GauGau
 Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
 Updated croatian, french, german, italian  - 21th October 2003, GauGau
 Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
+Removed buggy no right-click option - 27th October, GauGau
