Added admin notification for upload approval
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@343 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -50,3 +50,4 @@ Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
 Removed buggy no right-click option - 27th October, GauGau
 Added options to searchnew.php (batch-add): album selection mandatory; no dsiplay of dot-folders, userpics nor manipulation folders; buttons "select all/unselect all" - 2nd November 2003, GauGau
 Added focus on search box and login box - 2nd October, GauGau
+Added admin notification for upload approval - 2nd October, GauGau
