--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -47,7 +47,8 @@ Added option to disable comment flood protection - 19th October 2003, GauGau
 Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
 Updated croatian, french, german, italian  - 21th October 2003, GauGau
 Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
-Removed buggy no right-click option - 27th October, GauGau
+Removed buggy no right-click option - 27th October2003, GauGau
 Added options to searchnew.php (batch-add): album selection mandatory; no dsiplay of dot-folders, userpics nor manipulation folders; buttons "select all/unselect all" - 2nd November 2003, GauGau
-Added focus on search box and login box - 2nd October, GauGau
-Added admin notification for upload approval - 2nd October, GauGau
+Added focus on search box and login box - 2nd November, GauGau
+Added admin notification for upload approval - 2nd November, GauGau
+Added Breadcrumb for meta-albums -  8th November 2003, Tarique
