cosmetical fixes to util.php
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@360 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -53,3 +53,4 @@ Added focus on search box and login box - 2nd November, GauGau
 Added admin notification for upload approval - 2nd November, GauGau
 Added Breadcrumb for meta-albums -  8th November 2003, Tarique
 Added forgot my password link in login form - 9th November - GauGau
+Cosmetical fixes to util.php - 10th November 2003, GauGau
