--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -44,5 +44,6 @@ Added latvian language file for 1.2.0 - 16th October 2003, GauGau
 Added estonian and japanese language file for 1.2.0 - 21th October 2003, GauGau
 Updated croatian, french, german, italian  - 21th October 2003, GauGau
 Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
-Removed buggy no right-click option - 24th October, GauGau
+Removed buggy no right-click option - 24th October 2003, GauGau
 Added vietnamese - 1st November 2003, GauGau
+Applied cosmetical fixes to util.php - 10th November 2003, GauGau
