--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -54,3 +54,4 @@ Added admin notification for upload approval - 2nd November, GauGau
 Added Breadcrumb for meta-albums -  8th November 2003, Tarique
 Added forgot my password link in login form - 9th November - GauGau
 Cosmetical fixes to util.php - 10th November 2003, GauGau
+Added picture ownername display as an admin setable option - 17th November 2003, Tarique
