updated brazilian (user contrib)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@392 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -47,3 +47,4 @@ Added portuguese language file for 1.2.0 - 22th October 2003, GauGau
 Removed buggy no right-click option - 24th October 2003, GauGau
 Added vietnamese - 1st November 2003, GauGau
 Applied cosmetical fixes to util.php - 10th November 2003, GauGau
+Updated brazilian language file - 12th December 2003 - GauGau
