added language and theme selection - GauGau
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@405 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -57,3 +57,4 @@ Cosmetical fixes to util.php - 10th November 2003, GauGau
 Added picture ownername display as an admin setable option - 17th November 2003, Tarique
 Moved debug_output from themes to functions.inc.php with easy copy-and-paste option - 22nd November 2003, GauGau
 Changed yes/no dropdown in config to radio buttons (less clicks!) - 22nd November 2003, GauGau
+Added language and theme selection - 19th December 2003, GauGau
