--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -59,3 +59,5 @@ Moved debug_output from themes to functions.inc.php with easy copy-and-paste opt
 Changed yes/no dropdown in config to radio buttons (less clicks!) - 22nd November 2003, GauGau
 Added language and theme selection - 19th December 2003, GauGau
 Added admin set able option to put gallery offline - 3rd January 2004, Tarique
+Added a faster EXIF Reader class - 7th January 2004, Tarique
+Added a new crop and rotate editor - 7th January 2004, Tarique
