--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -61,3 +61,4 @@ Added language and theme selection - 19th December 2003, GauGau
 Added admin set able option to put gallery offline - 3rd January 2004, Tarique
 Added a faster EXIF Reader class - 7th January 2004, Tarique
 Added a new crop and rotate editor - 7th January 2004, Tarique
+Added RSS Feed Add On - 9th January 2004, Tarique
