added admin option to show/hide views under thumbnail
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@446 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -62,3 +62,4 @@ Added admin set able option to put gallery offline - 3rd January 2004, Tarique
 Added a faster EXIF Reader class - 7th January 2004, Tarique
 Added a new crop and rotate editor - 7th January 2004, Tarique
 Added RSS Feed Add On - 9th January 2004, Tarique
+Added admin option "show views under thumbnail" - 29th January 2004, GauGau
