Added user faq (admin option)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@465 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -66,3 +66,4 @@ Added admin option "show views under thumbnail" - 29th January 2004, GauGau
 Added category name to dropdown in upload.php (user contrib by the Burrek) - 17th February 2004, GauGau
 Added memberlist hack by jason - 17th February 2004, GauGau
 Updated the documentation - 17th February 2004, GauGau
+Added user FAQ (admin option) - 18th February 2004, GauGau
