--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -67,3 +67,4 @@ Added category name to dropdown in upload.php (user contrib by the Burrek) - 17t
 Added memberlist hack by jason - 17th February 2004, GauGau
 Updated the documentation - 17th February 2004, GauGau
 Added user FAQ (admin option) - 18th February 2004, GauGau
+Added "user can't rate own picture" hack (user contrib by jdbaranger) - 20th February 2004, GauGau
