Added bbcode help (user contrib by icebox)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@467 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -68,3 +68,4 @@ Added memberlist hack by jason - 17th February 2004, GauGau
 Updated the documentation - 17th February 2004, GauGau
 Added user FAQ (admin option) - 18th February 2004, GauGau
 Added "user can't rate own picture" hack (user contrib by jdbaranger) - 20th February 2004, GauGau
+Added bbcode help (user contrib by icebox) - 20th February 2004, GauGau
