--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -70,3 +70,4 @@ Added user FAQ (admin option) - 18th February 2004, GauGau
 Added "user can't rate own picture" hack (user contrib by jdbaranger) - 20th February 2004, GauGau
 Added bbcode help (user contrib by icebox) - 20th February 2004, GauGau
 Added clickable album names (user contrib) - 21th February 2004, GauGau
+Added theme 'styleguide' - 29th February 2004, GauGau
