--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -71,3 +71,4 @@ Added "user can't rate own picture" hack (user contrib by jdbaranger) - 20th Feb
 Added bbcode help (user contrib by icebox) - 20th February 2004, GauGau
 Added clickable album names (user contrib) - 21th February 2004, GauGau
 Added theme 'styleguide' - 29th February 2004, GauGau
+Added ecards logging - 29th February 2004, GauGau
