--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -72,3 +72,5 @@ Added bbcode help (user contrib by icebox) - 20th February 2004, GauGau
 Added clickable album names (user contrib) - 21th February 2004, GauGau
 Added theme 'styleguide' - 29th February 2004, GauGau
 Added ecards logging - 29th February 2004, GauGau
+Re-introduced "notify admin on comments" - 29th February 2004, GauGau
+Moved HTML format for image-borders from theme.php to style.css - 29th February 2004, GauGau
