--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -74,3 +74,4 @@ Added theme 'styleguide' - 29th February 2004, GauGau
 Added ecards logging - 29th February 2004, GauGau
 Re-introduced "notify admin on comments" - 29th February 2004, GauGau
 Moved HTML format for image-borders from theme.php to style.css - 29th February 2004, GauGau
+Added config option "debug output for admin only" - 2nd March 2004, GauGau
