--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -75,3 +75,4 @@ Added ecards logging - 29th February 2004, GauGau
 Re-introduced "notify admin on comments" - 29th February 2004, GauGau
 Moved HTML format for image-borders from theme.php to style.css - 29th February 2004, GauGau
 Added config option "debug output for admin only" - 2nd March 2004, GauGau
+Added multiple HTTP upload changes to the language file - 2nd March 2004, Hyperion
