--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -78,3 +78,4 @@ Added config option "debug output for admin only" - 2nd March 2004, GauGau
 Added multiple HTTP upload changes to the language file - 2nd March 2004, Hyperion
 Added Download Favourites as Zip file - 4th March 2004, Tarique
 Added footnote on album manager to explain group settings - 5th March 2004, GauGau
+Added feature "admin can't ban himself" - 11th March 2004, GauGau
