--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -79,3 +79,4 @@ Added multiple HTTP upload changes to the language file - 2nd March 2004, Hyperi
 Added Download Favourites as Zip file - 4th March 2004, Tarique
 Added footnote on album manager to explain group settings - 5th March 2004, GauGau
 Added feature "admin can't ban himself" - 11th March 2004, GauGau
+Added IP address lookup - 14th March 2004, GauGau
