added slideshow intervall option, added notices switch for debug mode, added keywords in metatags
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@539 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -80,3 +80,6 @@ Added Download Favourites as Zip file - 4th March 2004, Tarique
 Added footnote on album manager to explain group settings - 5th March 2004, GauGau
 Added feature "admin can't ban himself" - 11th March 2004, GauGau
 Added IP address lookup - 14th March 2004, GauGau
+Added switch to turn off notices in debug mode - 14th March 2004, GauGau
+Added slideshow intervall as admin option - 14th March 2004, GauGau
+Added pic keywords to meta tags - 14th March 2004, GauGau
