--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -85,3 +85,4 @@ Added IP address lookup - 14th March 2004, GauGau
 Added switch to turn off notices in debug mode - 14th March 2004, GauGau
 Added slideshow intervall as admin option - 14th March 2004, GauGau
 Added pic keywords to meta tags - 14th March 2004, GauGau
+Added multiple URI upload changes to the language file - 2nd March 2004, Hyperion
