--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -65,6 +65,7 @@ Added a faster EXIF Reader class - 7th January 2004, Tarique
 Added a new crop and rotate editor - 7th January 2004, Tarique
 Added RSS Feed Add On - 9th January 2004, Tarique
 Added admin option "show views under thumbnail" - 29th January 2004, GauGau
+Added video mod to {index.php;reviewcom.php;displayimage.php;db_input.php;editpics.php;searchnew.php;thumbnails.php;include/functions.inc.php;include/picmgmt.php;include/init.inc.php} - February 1, 2004, Chris
 Added category name to dropdown in upload.php (user contrib by the Burrek) - 17th February 2004, GauGau
 Added memberlist hack by jason - 17th February 2004, GauGau
 Updated the documentation - 17th February 2004, GauGau
@@ -76,6 +77,8 @@ Added theme 'styleguide' - 29th February 2004, GauGau
 Added ecards logging - 29th February 2004, GauGau
 Re-introduced "notify admin on comments" - 29th February 2004, GauGau
 Moved HTML format for image-borders from theme.php to style.css - 29th February 2004, GauGau
+Changed "picture" to "file" in lang/english.php - March 1, 2004, Chris
+Added bug fixes for video mod to {reviewcom.php;index.php;displayimage.php} - March 1, 2004, Chris
 Added config option "debug output for admin only" - 2nd March 2004, GauGau
 Added multiple HTTP upload changes to the language file - 2nd March 2004, Hyperion
 Added Download Favourites as Zip file - 4th March 2004, Tarique
@@ -86,3 +89,4 @@ Added switch to turn off notices in debug mode - 14th March 2004, GauGau
 Added slideshow intervall as admin option - 14th March 2004, GauGau
 Added pic keywords to meta tags - 14th March 2004, GauGau
 Added multiple URI upload changes to the language file - 16th March 2004, Hyperion
+Fixed album thumb bug - 22 March 2004, Chris
