Noted support for  multiple file and URI uploads.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@594 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -90,3 +90,4 @@ Added slideshow intervall as admin option - 14th March 2004, GauGau
 Added pic keywords to meta tags - 14th March 2004, GauGau
 Added multiple URI upload changes to the language file - 16th March 2004, Hyperion
 Fixed album thumb bug - 22 March 2004, Chris
+Added support for multiple HTTP/URI uploads - 30 March 2004, Hyperion
