Changed tiff, ram, and psd doctypes to 'document'
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@671 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -94,3 +94,4 @@ Added support for multiple HTTP/URI uploads - 30 March 2004, Hyperion
 Added height/width fields to editOnePic.php - 20 April 2004, Chris
 Fixed height/width fields in editpics.php - 20 April 2004, Chris
 Fixed 'missing controls' bug in displayimage.php - 20 April 2004, Chris
+Changed 'tiff', 'ram', and 'psd' doctypes to 'document' - 22 April 2004, Chris
