--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -97,3 +97,7 @@ Fixed 'missing controls' bug in displayimage.php - 20 April 2004, Chris
 Changed 'tiff', 'ram', and 'psd' doctypes to 'document' - 22 April 2004, Chris
 Updated miscellaneous documentation information - 24 April 2004, Chris
 Updated/Added new screenshot gifs - 24 April 2004, Chris
+Bridge to Simple Machines Forum (SMF) - April 2004, Jack
+Calculate suitable permissioons and quotas for users in multiple usergroups - May 2004, Jack
+Album visibility now correct for admins and users in multiple usergroups - May 2004, Jack
+Release 1.3.0 - 11 June 2004, GauGau
