--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -101,3 +101,4 @@ Bridge to Simple Machines Forum (SMF) - April 2004, Jack
 Calculate suitable permissioons and quotas for users in multiple usergroups - May 2004, Jack
 Album visibility now correct for admins and users in multiple usergroups - May 2004, Jack
 Release 1.3.0 - 11 June 2004, GauGau
+Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
