--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -102,3 +102,5 @@ Calculate suitable permissioons and quotas for users in multiple usergroups - Ma
 Album visibility now correct for admins and users in multiple usergroups - May 2004, Jack
 Release 1.3.0 - 11 June 2004, GauGau
 Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
+Added valid XHTML 1.0 transitional output to index and thumbnail,  14th June 2004 tarique
+Added server side favorite, 14th June 2004 tarique
