fixed table row creation bug
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@835 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -104,3 +104,4 @@ Release 1.3.0 - 11 June 2004, GauGau
 Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
 Added valid XHTML 1.0 transitional output to index and thumbnail,  14th June 2004 tarique
 Added server side favorite, 14th June 2004 tarique
+Fixed bug in update.sql, 14th June 2004, casper
