--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -102,7 +102,9 @@ Calculate suitable permissioons and quotas for users in multiple usergroups - Ma
 Album visibility now correct for admins and users in multiple usergroups - May 2004, Jack
 Release 1.3.0 - 11 June 2004, GauGau
 Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
-Added valid XHTML 1.0 transitional output to index and thumbnail,  14th June 2004 tarique
+Added valid XHTML 1.0 transitional output to index and thumbnail, 14th June 2004 tarique
 Added server side favorite, 14th June 2004 tarique
+Added more info display to lasthits meta album, 14th June 2004 tarique
+Added ISO to EXIF extraction, 14th June 2004 tarique
 Fixed bug in update.sql, 14th June 2004, casper
 Changed 'cpg130_filetypes' to 'CPG_filetypes' - 14 June 2004, Chris
