added images folder and copied coppermine logo as 'site_logo.png' fixed user album thumb showing 'nopic.jpg' only
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@844 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -103,3 +103,5 @@ Album visibility now correct for admins and users in multiple usergroups - May 2
 Release 1.3.0 - 11 June 2004, GauGau
 Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
 Changed 'cpg130_filetypes' to 'CPG_filetypes' - 14 June 2004, Chris
+Added 'images' folder to 'themes/classic' and inserted Coppermine logo as 'site_logo.png' - 15 June 2004, Chris
+Fixed user album thumb showing only 'nopic.jpg' - 15 June 2004, Chris
