Added config settable profile fields.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@870 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -113,3 +113,4 @@ Fixed album visibility issue - 16 June 2004, Chris
 Fixed 'install not working' - 16 June 2004, Chris
 Added valid XHTML 1.0 transitional output to displayimage, 17th June 2004 tarique
 Updated Server side favorite to be in separate table, 17th June 2004 tarique
+Added config settable profile fields, 19th June 2004, casper
