--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -108,4 +108,5 @@ Fixed user album thumb showing only 'nopic.jpg' - 15 June 2004, Chris
 Changed thumb generation in index.php [list_users()] to same as devel branch - 15 June 2004, Chris
 Fixed user album visibility issue - 16 June 2004, Chris
 Fixed pic count in categories issue - 16 June 2004, Chris
-
+Added Finnsih and Malay translations - 22 June 2004, GauGau
+Removed 17 cpg1.2.1 language files from stable cvs branch - 22 June 2004, GauGau
