--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -115,3 +115,4 @@ Added valid XHTML 1.0 transitional output to displayimage, 17th June 2004, tariq
 Updated Server side favorite to be in separate table, 17th June 2004 tarique
 Added config settable profile fields, 19th June 2004, casper
 Added keyword Inserter, 20th June 2004, tarique
+Added version warning if other version than stable is being used, 22.06.2004, GauGau
