added Swedish (user contrib)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@931 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -111,3 +111,4 @@ Fixed pic count in categories issue - 16 June 2004, Chris
 Added Finnsih and Malay translations - 22 June 2004, GauGau
 Removed 17 cpg1.2.1 language files from stable cvs branch - 22 June 2004, GauGau
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
+Added Swedish language files (user contrib) - 25 June 2004, GauGau
