--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -119,3 +119,4 @@ Added version warning if other version than stable is being used, 22.06.2004, Ga
 Changed profile field 6 to text area for longer biography entries etc, 22.06.2004, Casper
 Added text link over thumbnails on profile page, 23.06.2004, GauGau
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
+Added Swedish language files (user contrib) - 25 June 2004, GauGau
