--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -120,3 +120,4 @@ Changed profile field 6 to text area for longer biography entries etc, 22.06.200
 Added text link over thumbnails on profile page, 23.06.2004, GauGau
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
+Added check to searchnew.php for "no subfolders within albums" - - 25 June 2004, GauGau
