Added Site Navigation elements using <link rel="" >
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@934 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -115,9 +115,11 @@ Added valid XHTML 1.0 transitional output to displayimage, 17th June 2004, tariq
 Updated Server side favorite to be in separate table, 17th June 2004 tarique
 Added config settable profile fields, 19th June 2004, casper
 Added keyword Inserter, 20th June 2004, tarique
+Added framework for language fall back, 22 June 2004, Tarique
 Added version warning if other version than stable is being used, 22.06.2004, GauGau
 Changed profile field 6 to text area for longer biography entries etc, 22.06.2004, Casper
 Added text link over thumbnails on profile page, 23.06.2004, GauGau
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
 Added check to searchnew.php for "no subfolders within albums" - - 25 June 2004, GauGau
+Added some Site Navigation elements using <LINK rel='' - 25 June 2004, Tarique
