added Czech and Latvian (user contrib)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@949 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -123,3 +123,5 @@ Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
 Added check to searchnew.php for "no subfolders within albums" - - 25 June 2004, GauGau
 Added some Site Navigation elements using <LINK rel='' - 25 June 2004, Tarique
+Added Latvian language files (user contrib) - 30 June 2004, GauGau
+Added Czech language files (user contrib) - 30 June 2004, GauGau
