--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -112,3 +112,5 @@ Added Finnsih and Malay translations - 22 June 2004, GauGau
 Removed 17 cpg1.2.1 language files from stable cvs branch - 22 June 2004, GauGau
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
+Added Latvian language files (user contrib) - 30 June 2004, GauGau
+Added Czech language files (user contrib) - 30 June 2004, GauGau
