Added warning to backup anycontent.php
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@962 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -125,3 +125,4 @@ Added check to searchnew.php for "no subfolders within albums" - - 25 June 2004,
 Added some Site Navigation elements using <LINK rel='' - 25 June 2004, Tarique
 Added Latvian language files (user contrib) - 30 June 2004, GauGau
 Added Czech language files (user contrib) - 30 June 2004, GauGau
+Added warning in docs to backup anycontent when upgrading, 4 July 2004, Casper
