--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -114,3 +114,4 @@ Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
 Added Latvian language files (user contrib) - 30 June 2004, GauGau
 Added Czech language files (user contrib) - 30 June 2004, GauGau
+Added warning in docs to backup anycontent when upgrading, 4 July 2004, Casper
