--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -133,3 +133,4 @@ Fixed 'system thumbs not renaming on config change' - 4 July 2004, Chris
 Added 'if' block for unlink operations in update.php - 4 July 2004, Chris
 Added 'media-autostart' to config values - 4 July 2004, Chris
 Added 'media_autostart' to lang_config_data - 4 July 2004, Chris
+Added Password protected albums - 6th July 2004, Tarique
