--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -135,3 +135,4 @@ Added 'media-autostart' to config values - 4 July 2004, Chris
 Added 'media_autostart' to lang_config_data - 4 July 2004, Chris
 Added Password protected albums - 6th July 2004, Tarique
 Changed hard coded english in delete.php and upload.php to lang file, user contribution u3uk, 6 July 2004, Casper
+Fixed expiration bug in banning.php, added calendar.php to select date - 6 July 2004, GauGau
