Replaced mailer functions to send both plain-text and html-enabled emails
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1034 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -140,3 +140,4 @@ Added admin option to allow banning of private IPs  - 6 July 2004, GauGau
 Moved SMTP settings from include/mailer.inc.php to coppermine config - 8 July 2004, GauGau
 Added various changes for plugin API - 8 July 2004, Chris
 Added flashing approval button if pics require admin approval - 9 July 2004, GauGau
+Replaced mailer functions to send both plain-text and html-enabled emails - 11 July, GauGau
