--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -141,3 +141,4 @@ Moved SMTP settings from include/mailer.inc.php to coppermine config - 8 July 20
 Added various changes for plugin API - 8 July 2004, Chris
 Added flashing approval button if pics require admin approval - 9 July 2004, GauGau
 Replaced mailer functions to send both plain-text and html-enabled emails - 11 July, GauGau
+Added links to album properties, parent category and thumbnail view in editpics.php - 13 July 2004, GauGau
