--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -115,3 +115,4 @@ Added Swedish language files (user contrib) - 25 June 2004, GauGau
 Added Latvian language files (user contrib) - 30 June 2004, GauGau
 Added Czech language files (user contrib) - 30 June 2004, GauGau
 Added warning in docs to backup anycontent when upgrading, 4 July 2004, Casper
+Fixed double slash '//' bug in upload notification email, in upload.php - 17th July 2004, Casper
