--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -91,6 +91,7 @@ Added pic keywords to meta tags - 14th March 2004, GauGau
 Added multiple URI upload changes to the language file - 16th March 2004, Hyperion
 Fixed album thumb bug - 22 March 2004, Chris
 Added support for multiple HTTP/URI uploads - 30 March 2004, Hyperion
+Fixed 'unable to ban with bb integration bug - 19th April, Nibbler
 Added height/width fields to editOnePic.php - 20 April 2004, Chris
 Fixed height/width fields in editpics.php - 20 April 2004, Chris
 Fixed 'missing controls' bug in displayimage.php - 20 April 2004, Chris
@@ -100,6 +101,7 @@ Updated/Added new screenshot gifs - 24 April 2004, Chris
 Bridge to Simple Machines Forum (SMF) - April 2004, Jack
 Calculate suitable permissioons and quotas for users in multiple usergroups - May 2004, Jack
 Album visibility now correct for admins and users in multiple usergroups - May 2004, Jack
+Anonymous can not send ecards bug fix - May 20th 2004, Nibbler
 Release 1.3.0 - 11 June 2004, GauGau
 Removed 'field1' typo in editOnepics.php, 13th June 2004 casper
 Added valid XHTML 1.0 transitional output to index and thumbnail, 14th June 2004 tarique
@@ -119,10 +121,15 @@ Added framework for language fall back, 22 June 2004, Tarique
 Added version warning if other version than stable is being used, 22.06.2004, GauGau
 Changed profile field 6 to text area for longer biography entries etc, 22.06.2004, Casper
 Added text link over thumbnails on profile page, 23.06.2004, GauGau
+Fixed 'Restore factory defaults' bug - 24th June, Nibbler
 Added Arabic language files (user contrib) - 25 June 2004, GauGau
 Added Swedish language files (user contrib) - 25 June 2004, GauGau
 Added check to searchnew.php for "no subfolders within albums" - - 25 June 2004, GauGau
 Added some Site Navigation elements using <LINK rel='' - 25 June 2004, Tarique
+Fixed 'Private pics no longer displayed as 'last comment by' in profile page' bug - June 28th, Nibbler
+Rewritten admin tools page, added db refresh, deletion of resized pics, XHTML compliance - June 28th, Nibbler
+Added timezone GMT offset feature - 29th June, Nibbler
+Added individual query timings for debug mode box - 29th June, Nibbler
 Added Latvian language files (user contrib) - 30 June 2004, GauGau
 Added Czech language files (user contrib) - 30 June 2004, GauGau
 Fixed "> 1k users --> very slow" bug - 1 July 2004, Chris
@@ -143,3 +150,6 @@ Added flashing approval button if pics require admin approval - 9 July 2004, Gau
 Replaced mailer functions to send both plain-text and html-enabled emails - 11 July, GauGau
 Added links to album properties, parent category and thumbnail view in editpics.php - 13 July 2004, GauGau
 Added online help (help-icon that can refer to parts of documentation) - 14 July 2004, GauGau
+Fixed all internal and external links in the documentation - 14th July, Nibbler
+Changed activation email link to use config set gallery url - 19th July, Nibbler
+Added reset view counter into admin tools - 20 July 2004, Nibbler
