--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -154,3 +154,4 @@ Fixed all internal and external links in the documentation - 14th July, Nibbler
 Changed activation email link to use config set gallery url - 19th July, Nibbler
 Added reset view counter into admin tools - 20 July 2004, Nibbler
 Modified groups manager to fit on one page - 20 July 2004, GauGau
+New javascript driven config page  - 20th July, Nibbler
