user can change email address in profile
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@1102 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -157,3 +157,5 @@ Modified groups manager to fit on one page - 20 July 2004, GauGau
 New javascript driven config page  - 20th July, Nibbler
 Added overview over used colors in style sheets - 22 July 2004, GauGau
 Changed help icon availability for all users vs. admin only - 22 July 2004, GauGau
+Added option 'user can change email address in profile' - 22 July 2004, GauGau
+
